Renamed the script include in index.html

--- a/generators/app/templates/app/index.html
+++ b/generators/app/templates/app/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<!-- build:js scripts/rnautils.js -->
+<!-- build:js scripts/mymodule.js -->
 <script src='scripts/mymodule.js'></script>
 <!-- endbuild -->
 
